--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,14 @@ __pycache__
 model_data
 venv
 
+# Coverage
+.coverage
+.coverage.*
+coverage.json
+coverage.txt
+coverage.xml
+htmlcov
+
 # Output files
 pow_*.pdf
 pow_*.txt
