--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -20,6 +20,7 @@ pipelines:
             - pip
           script:
             - python -V
+            - apt-get install -y graphviz
             - pip install -r requirements.txt
             - pip install pylint
             - pyreverse ./bubble ./gw_code -o png
