Add missing apt-get update to Graphviz installation

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -20,6 +20,7 @@ pipelines:
             - pip
           script:
             - python -V
+            - apt-get update
             - apt-get install -y graphviz
             - pip install -r requirements.txt
             - pip install pylint
