Add dot output, grouping and annotations for pyan3

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,16 +64,22 @@ jobs:
           pyreverse . -o png -d ./uml
           pyreverse . -o svg -d ./uml
       - name: Run Pyan
+        # -a = --annotated
+        # -e = --nested-groups
         run: |
           mkdir call_graphs
-          pyan3 "./**/*.py" --html > ./call_graphs/call_graph_all.html
-          pyan3 "./**/*.py" --svg > ./call_graphs/call_graph_all.svg
-          pyan3 "./bubble/*.py" "./gw_code/*.py" --html > ./call_graphs/call_graph_pttools.html
-          pyan3 "./bubble/*.py" "./gw_code/*.py" --svg > ./call_graphs/call_graph_pttools.svg
-          pyan3 "./bubble/bubble.py" --html > ./call_graphs/call_graph_bubble.html
-          pyan3 "./bubble/bubble.py" --svg > ./call_graphs/call_graph_bubble.svg
-          pyan3 "./gw_code/ssmtools.py" --html > ./call_graphs/call_graph_ssmtools.html
-          pyan3 "./gw_code/ssmtools.py" --svg > ./call_graphs/call_graph_ssmtools.svg
+          pyan3 "./**/*.py" -a -e --dot --colored > ./call_graphs/call_graph_all.dot
+          pyan3 "./**/*.py" -a -e --html > ./call_graphs/call_graph_all.html
+          pyan3 "./**/*.py" -a -e --svg > ./call_graphs/call_graph_all.svg
+          pyan3 "./bubble/*.py" "./gw_code/*.py" -a -e --dot --colored > ./call_graphs/call_graph_pttools.dot
+          pyan3 "./bubble/*.py" "./gw_code/*.py" -a -e --html > ./call_graphs/call_graph_pttools.html
+          pyan3 "./bubble/*.py" "./gw_code/*.py" -a -e --svg > ./call_graphs/call_graph_pttools.svg
+          pyan3 "./bubble/bubble.py" -a -e --dot --colored > ./call_graphs/call_graph_bubble.dot
+          pyan3 "./bubble/bubble.py" -a -e --html > ./call_graphs/call_graph_bubble.html
+          pyan3 "./bubble/bubble.py" -a -e --svg > ./call_graphs/call_graph_bubble.svg
+          pyan3 "./gw_code/ssmtools.py" -a -e --html --dot --colored > ./call_graphs/call_graph_ssmtools.dot
+          pyan3 "./gw_code/ssmtools.py" -a -e --html > ./call_graphs/call_graph_ssmtools.html
+          pyan3 "./gw_code/ssmtools.py" -a -e --svg > ./call_graphs/call_graph_ssmtools.svg
       - name: Upload results
         uses: actions/upload-artifact@v2
         with:
