--- a/.coveragerc
+++ b/.coveragerc
@@ -1,6 +1,6 @@
 [run]
 branch = True
-command_line = -m unittest discover -s tests
+# command_line = -m unittest discover -s tests
 source = .
 omit =
     */venv/*
