--- a/.pylintrc
+++ b/.pylintrc
@@ -421,12 +421,37 @@ function-naming-style=snake_case
 #function-rgx=
 
 # Good variable names which should always be accepted, separated by a comma.
-good-names=i,
-           j,
-           k,
-           ex,
-           Run,
-           _
+good-names=
+    i,
+    j,
+    k,
+    ex,
+    Run,
+    _,
+    # Custom additions
+    a,
+    ax,
+    b,
+    c,
+    dv,
+    f,
+    f2,
+    g,
+    it,
+    ls,
+    n,
+    nu,
+    p,
+    r,
+    t,
+    v,
+    w,
+    x,
+    xi,
+    y,
+    z,
+    z0,
+    z1
 
 # Good variable names regexes, separated by a comma. If names match any regex,
 # they will always be accepted
