Remove pytest-pythonpath

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.pytest.ini_options]
 addopts = "--cov=. --cov-report=html --cov-report=term --cov-report=term-missing --cov-report=xml --html=test-results/test-report.html --numprocesses=auto"
-python_paths = "tests"
+# python_paths = "tests"
 testpaths = [
     "tests"
 ]
