--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -118,7 +118,7 @@ jobs:
     - name: Install requirements
       run: |
         pip --cache-dir=.pip install --upgrade pip
-        pip --cache-dir=.pip install pytest pytest-cov pytest-html pytest-xdist
+        pip --cache-dir=.pip install allure-pytest pytest pytest-cov pytest-html pytest-xdist
         pip --cache-dir=.pip install -r requirements.txt
     - name: Run tests with coverage
       # Without pytest-pythonpath the PYTHONPATH may have to be set manually
