Add more call graphs

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,9 +65,12 @@ jobs:
           pyreverse pttools -o svg -d ./uml
       - name: Run Pyan
         run: |
+          ./gen_call_graphs.sh "all" "./**/*.py"
           ./gen_call_graphs.sh "bubble" "./pttools/bubble/**/*.py"
           ./gen_call_graphs.sh "pttools" "./pttools/**/*.py"
+          ./gen_call_graphs.sh "pttools_tests" "./pttools/**/*.py" "./tests/**/*.py"
           ./gen_call_graphs.sh "ssmtools" "./pttools/ssmtools/**/*.py"
+          ./gen_call_graphs.sh "tests" "./tests/**/*.py"
       - name: Upload results
         uses: actions/upload-artifact@v2
         with:
