--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,7 @@
 [tool.pytest.ini_options]
+# On clusters "--numprocesses=auto" creates processes according to the total number of CPU cores
+# instead of the number of cores available to the job.
+# Therefore it may be wise to set the number of processes manually.
 addopts = "--alluredir=test-results/allure --cov=. --cov-report=html --cov-report=term --cov-report=term-missing --cov-report=xml --html=test-results/html/test-report.html --numprocesses=auto"
 # python_paths = "tests"
 testpaths = [
