--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,5 @@
-# EditorConfig is awesome: https://EditorConfig.org
+# EditorConfig
+# https://editorconfig.org
 
 # top-most EditorConfig file
 root = true
@@ -18,16 +19,10 @@ charset = utf-8
 indent_style = space
 indent_size = 4
 
+[*.rst]
+indent_style = space
+indent_size = 2
+
 # Tab indentation (no size specified)
 [Makefile]
 indent_style = tab
-
-# Indentation override for all JS under lib directory
-[lib/**.js]
-indent_style = space
-indent_size = 2
-
-# Matches the exact files either package.json or .travis.yml
-[{package.json,.travis.yml}]
-indent_style = space
-indent_size = 2
