--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,10 @@ icc-rt
 matplotlib
 numba
 git+git://github.com/Nicholaswogan/NumbaLSODA.git
+# If you're using an old version of Numba and get the error:
+# "create_target_machine() got an unexpected keyword argument 'jitdebug'"
+# then you may have to downgrade llvmlite to 0.32.1
+# https://github.com/rapidsai/cuml/issues/2389#issuecomment-642645437
 numpy
 scipy
 # TBB can be used to speed up Numba threading
