--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -122,6 +122,52 @@ jobs:
           test-output.txt
           test-results
         if-no-files-found: error
+  test-numba-old:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ 3.6, 3.7 ]
+    env:
+      PRIMARY_PYTHON_VERSION: 3.7
+    steps:
+    - name: Setup Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Print Python version
+      run: python -V
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Load pip cache
+      uses: actions/cache@v2
+      with:
+        path: .pip
+        key: pip-${{ runner.os }}-${{ hashFiles('requirements.txt') }}
+        restore-keys: |
+          pip-${{ runner.os }}-
+          pip-
+    - name: Install requirements
+      run: |
+        pip --cache-dir=.pip install --upgrade pip
+        pip --cache-dir=.pip install numba==0.45.1 llvmlite==0.32.1
+        pip --cache-dir=.pip install -r requirements.txt -r requirements-dev.txt
+    - name: Run tests
+      run: |
+        set -o pipefail
+        pytest | tee test-output.txt
+        coverage json
+    - name: Upload results
+      uses: actions/upload-artifact@v2
+      if: ${{ matrix.python-version == env.PRIMARY_PYTHON_VERSION }}
+      with:
+        name: Test results with old Numba
+        path: |
+          coverage.xml
+          coverage.json
+          htmlcov
+          test-output.txt
+          test-results
+        if-no-files-found: error
   test-python:
     runs-on: ubuntu-latest
     strategy:
