Create requirements-old.txt for testing with old Numba

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -147,12 +147,9 @@ jobs:
           pip-${{ runner.os }}-
           pip-
     - name: Install requirements
-      # NumPy 1.20.0 had an ABI change that made it incompatible with old Numba versions
-      # https://github.com/numba/numba/issues/6041#issuecomment-665123183
       run: |
         pip --cache-dir=.pip install --upgrade pip
-        pip --cache-dir=.pip install llvmlite==0.32.1 numba==0.45.1 numpy==1.16.4
-        pip --cache-dir=.pip install -r requirements.txt -r requirements-dev.txt
+        pip --cache-dir=.pip install -r requirements-old.txt -r requirements-dev.txt
     - name: Run tests
       run: |
         set -o pipefail
