--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,6 +93,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Print Python version
       run: python -V
+    - name: Install ffmpeg
+      run: sudo apt-get install ffmpeg
     - name: Checkout
       uses: actions/checkout@v2
     - name: Load pip cache
