--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,41 @@
 name: CI
 on: push
 jobs:
+  docs:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup Python
+        uses: actions/setup-python@v2
+      - name: Print Python version
+        run: python -V
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Load pip cache
+        uses: actions/cache@v2
+        with:
+          path: .pip
+          key: pip-${{ runner.os }}-${{ hashFiles('requirements.txt') }}
+          restore-keys: |
+            pip-${{ runner.os }}-
+            pip-
+      - name: Install requirements
+        run: |
+          pip --cache-dir=.pip install --upgrade pip
+          pip --cache-dir=.pip install --upgrade wheel
+          pip --cache-dir=.pip install -r requirements.txt -r docs/requirements.txt
+      - name: Generate documentation
+        run: |
+          cd docs
+          make html
+          make latexpdf
+          make epub
+      - name: Upload results
+        uses: actions/upload-artifact@v2
+        with:
+          name: Documentation
+          path: |
+            docs/_build
+          if-no-files-found: error
   graph:
     runs-on: ubuntu-latest
     steps:
