--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,7 @@
 name: CI
 on: push
+env:
+  PRIMARY_PYTHON_VERSION: 3.8
 jobs:
   docs:
     runs-on: ubuntu-latest
@@ -121,8 +123,6 @@ jobs:
     strategy:
       matrix:
         python-version: [ 3.6, 3.7, 3.8, 3.9 ]
-    env:
-      PRIMARY_PYTHON_VERSION: 3.8
     steps:
     - name: Setup Python
       uses: actions/setup-python@v2
@@ -170,7 +170,7 @@ jobs:
       matrix:
         python-version: [ 3.6, 3.7 ]
     env:
-      PRIMARY_PYTHON_VERSION: 3.7
+      PRIMARY_OLD_PYTHON_VERSION: 3.7
     steps:
     - name: Setup Python
       uses: actions/setup-python@v2
@@ -200,7 +200,7 @@ jobs:
         coverage json
     - name: Upload results
       uses: actions/upload-artifact@v2
-      if: ${{ matrix.python-version == env.PRIMARY_PYTHON_VERSION }}
+      if: ${{ matrix.python-version == env.PRIMARY_OLD_PYTHON_VERSION }}
       with:
         name: Test results with old Numba
         path: |
@@ -215,8 +215,6 @@ jobs:
     strategy:
       matrix:
         python-version: [ 3.6, 3.7, 3.8, 3.9 ]
-    env:
-      PRIMARY_PYTHON_VERSION: 3.8
     steps:
     - name: Setup Python
       uses: actions/setup-python@v2
