--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   deploy-pypi:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     steps:
       - name: Setup Python
         uses: actions/setup-python@v2
