--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,12 @@
 # Anaconda environment configuration
 
+# If you get an error with the following lines in its long output:
+# Fatal Python error: Aborted
+# File "/home/mika/Git/pttools/envs/lib/python3.7/site-packages/matplotlib/backends/backend_qt5.py", line 119 in _create_qApp
+# Then run the following commands:
+# conda uninstall pyqt
+# conda install matplotlib-base
+
 name: pttools
 dependencies:
   - python>=3.6
