--- a/setup.cfg
+++ b/setup.cfg
@@ -30,4 +30,5 @@ packages =
 python_requires = >=3.6
 
 [options.extras_require]
+NumbaLSODA = NumbaLSODA @ git+https://github.com/Nicholaswogan/NumbaLSODA.git
 performance = icc-rt; tbb
