Fix Numba permissions on macOS

--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -28,7 +28,9 @@ jobs:
             pip --cache-dir=.pip install --upgrade wheel
             pip --cache-dir=.pip install -r requirements.txt -r requirements-dev.txt
         - name: Print Numba information
-          run: numba --sysinfo
+          run: |
+            chmod +x "$(which numba)"
+            numba --sysinfo
         - name: Run tests
           run: |
             set -o pipefail
